mainly re organized the autoexec and applied small change to medic bindsto reduce acidental drops

--- a/overrides/autoexec.cfg
+++ b/overrides/autoexec.cfg
@@ -1,33 +1,15 @@
 //defines the functions controlled by the toggleState bind
 exec overrides/toggleStates/toggleStateParams
+exec overrides/serverAdminCommands
+exec overrides/map&ServerCommands
+exec overrides/movement
+exec overrides/demoReview
 exec overrides/reset
 
-//personal binds
-bind d +mfwd
-bind a +mback
-bind s +mleft
-bind f +mright
-
-alias +mfwd "-back;+forward;alias checkfwd +forward"
-alias +mback "-forward;+back;alias checkback +back"
-alias +mleft "-moveright;+moveleft;alias checkleft +moveleft"
-alias +mright "-moveleft;+moveright;alias checkright +moveright"
-alias -mfwd "-forward;checkback;alias checkfwd none"
-alias -mback "-back;checkfwd;alias checkback none"
-alias -mleft "-moveleft;checkright;alias checkleft none"
-alias -mright "-moveright;checkleft;alias checkright none"
-alias checkfwd none
-alias checkback none
-alias checkleft none
-alias checkright none
-alias none ""
-//analysis: This is pretty incredible, the check aliases basically check if a directiojn key has been pressed. So that when you release a direction key, it knows to immediatley move you in the opposite direction or just stay still. The check aliases get set when you press that key and get unset when you release that key
+//resetting class loadouts
+load_itempreset 0
 
 
-alias "battlecry" "voicemenu 2 1";
-alias "+panic" "battlecry; cl_yawspeed 3000; +left; +attack";
-alias "-panic" "-attack; -left; cl_yawspeed 210";
-//bind "mouse3" "+panic";
 
 bind "KP_END" "join_class scout"
 bind "KP_DOWNARROW" "join_class soldier"
@@ -39,17 +21,6 @@ bind "KP_HOME" "join_class medic"
 bind "KP_UPARROW" "join_class sniper"
 bind "KP_PGUP" "join_class spy"
 
-//toggling viewmodels for primary and secondary weapons
-//When on, i want switching to primary or secondary to set r_drawviewmodel to 0
-//when off, I want viewmodels to stay 1 no matter what.
-
-//Basically I want to add a command to my weapon swithc that looks for the value of a viewModelStatus
-//This status should simply draw viewmodels or not. 
-//I want pressing N to toggle the value of this status
-	//currently, pressing N simply runs the toggle command	
-		//the actual toggle function is built into the definition of the command. N doesn't actually toggle anything, it just iterates through a loop.
-//So how cna I get a command that remains consitent when pinged from one source (the weapon switch) but toggles when hit from another source, (pressing N).
-	//obviously this would be easy by just using two different binds, but I want to do it in one if possible.
 
 bind n "toggleViewModels"
 alias toggleViewModels viewModelsOff
@@ -57,201 +28,26 @@ alias toggleViewModels viewModelsOff
 alias ViewModelsOff "r_drawviewmodel 0; alias toggleViewModels ViewModelsOn"
 alias ViewModelsOn "r_drawviewmodel 1; alias toggleViewModels ViewModelsOff"
 
+
+//***** misc *****
 bind j "mp_waitingforplayers_cancel 1"
-
-//custom crouch jumps -----------------------------------------------------------------
-alias +jumpDuck "+jump; +duck; spec_mode"
-alias -jumpDuck "-jump; -duck"
-
-alias +jumpFunction +jumpDuck
-alias -jumpFunction -jumpDuck
-
-alias resetJumpDuck "-jump; alias +jumpFunction +jumpDuck; alias -jumpFunction -jumpDuck"
-
-alias +crouch "+duck; alias +jumpFunction +jump; alias -jumpFunction resetJumpDuck"
-alias -crouch "-duck;"
-//--------------------------------------------------------------------------------------
-
-
-
-//chat binds
-
-//failed project:
-//alias vm_1 "voice_menu_1; alias chatMenuCycle vm_2"
-//alias vm_2 "voice_menu_2; alias chatMenuCycle vm_3"
-//alias vm_3 "voice_menu_3; alias chatMenuCycle vm_1"
-//alias chatMenuCycle vm_1
-
-bind c voice_menu_3
-bind w "slot3"
-
-alias "myServerPass" "wafflesreignsupreme"
-alias "myServer" "connect 169.254.4.215:7120; password "wafflesreignsupreme""
-alias "rconPass" "rcon_password pancakesreignsupreme"
-
-alias jagMatch "connect 74.91.115.223:27015; password aaa"
-alias jag "connect 74.91.115.223:27015; password lessqqmorepewpew"
-alias pboys "connect 74.91.119.87:27015; password yoyoyo"
-alias xanax "connect 74.91.122.129; password SCR1NGUS
-alias "c2w" "connect ctap.game.nfoservers.com:27015; password seedy"
-alias "c2wrconPass" "rcon_password tecolote13"
-
-
-alias "myserverPass" "password wafflesreignsupreme"
-
-alias rconSnake "rcon changelevel cp_snakewater_final1"
-alias !rconSnake "say !rcon changelevel cp_snakewater_final1"
-alias rconBagel "rcon changelevel koth_bagel_rc7"
-alias !rconBagel "say !rcon changelevel koth_bagel_rc7"
-alias rconClearcut "rcon changelevel koth_clearcut_b15d"
-alias !rconClearcut "say !rcon changelevel koth_clearcut_b15d"
-alias rconProcess "rcon changelevel cp_process_f12"
-alias !rconProcess "say !rcon changelevel cp_process_f12"
-alias rconSunshine "rcon changelevel cp_sunshine"
-alias !rconSunshine "say !rcon changelevel cp_sunshine"
-alias rconReckoner "rcon changelevel cp_reckoner_rc6"
-alias !rconReckoner "say !rcon changelevel cp_reckoner_rc6"
-alias rconMetal "rcon changelevel cp_metalworks_f5p"
-alias !rconMetal "say !rcon changelevel cp_metalworks_f5p"
-alias rconGully "rcon changelevel cp_gullywash_f9"
-alias !rconGully "say !rcon changelevel cp_gullywash_f9"
-alias rconGranary "rcon changelevel cp_granary_pro_rc2"
-alias !rconGranary "say !rcon changelevel cp_granary_pro_rc2"
-alias rconProduct "rcon changelevel koth_product_final"
-alias !rconProduct "say !rcon changelevel koth_product_final"
-alias rconMge "rcon changelevel mge_training_v8_beta4b"
-alias !rconMge "say !rcon changelevel mge_training_v8_beta4b"
-alias rconMge2 "rcon changelevel mge_oihguv_sucks_a12"
-alias !rconMge2 "say !rcon changelevel mge_oihguv_sucks_a12"
-alias rconMge3 "rcon changelevel mge_oihguv_sucks_b5"
-alias !rconMge3 "say !rcon changelevel mge_oihguv_sucks_b5"
-alias rconMgeChilly "rcon changelevel mge_chillypunch_final4_fix2"
-alias !rconMgeChilly "say !rcon changelevel mge_chillypunch_final4_fix2"
-alias rconSultry "rcon changelevel cp_sultry_b8"
-alias !rconSultry "say !rcon changelevel cp_sultry_b8"
-
-
-
-
-alias scrim "rcon exec rgl_6s_5cp_scrim"
-alias match1 "rcon exec rgl_6s_5cp_match_half1"
-alias match2 "rcon exec rgl_6s_5cp_match_half2"
-alias matchGc "rcon exec rgl_6s_5cp_gc"
-alias matchPro "rcon exec rgl_6s_5cp_match_pro"
-alias matchImproved "rcon exec rgl_6s_5cp_improvedtimers"
-alias kothPro "rcon exec rgl_6s_koth_pro"
-alias koth "rcon exec rgl_6s_koth"
-
-alias !scrim "say !rcon exec rgl_6s_5cp_scrim"
-alias !match1 "say !rcon exec rgl_6s_5cp_match_half1"
-alias !match2 "say !rcon exec rgl_6s_5cp_match_half2"
-alias !matchGc "say !rcon exec rgl_6s_5cp_gc"
-alias !matchPro "say !rcon exec rgl_6s_5cp_match_pro"
-alias !matchImproved "say !rcon exec rgl_6s_5cp_improvedtimers"
-alias !kothPro "say !rcon exec rgl_6s_koth_pro"
-alias !koth "say !rcon exec rgl_6s_koth"
-
-alias win1 "rcon mp_winlimit 1"
-alias win2 "rcon mp_winlimit 2"
-alias win3 "rcon mp_winlimit 3"
-alias win4 "rcon mp_winlimit 4"
-alias win5 "rcon mp_winlimit 5"
-alias win6 "rcon mp_winlimit 6"
-alias win7 "rcon mp_winlimit 7"
-alias win8 "rcon mp_winlimit 8"
-alias win9 "rcon mp_winlimit 9"
-alias win10 "rcon mp_winlimit 10"
-alias win11 "rcon mp_winlimit 11"
-alias win12 "rcon mp_winlimit 12"
-
-alias !win1 "say !rcon mp_winlimit 1"
-alias !win2 "say !rcon mp_winlimit 2"
-alias !win3 "say !rcon mp_winlimit 3"
-alias !win4 "say !rcon mp_winlimit 4"
-alias !win5 "say !rcon mp_winlimit 5"
-
-alias time5 "rcon mp_timelimit 5"
-alias time6 "rcon mp_timelimit 6"
-alias time7 "rcon mp_timelimit 7"
-alias time8 "rcon mp_timelimit 8"
-alias time9 "rcon mp_timelimit 9"
-alias time10 "rcon mp_timelimit 10"
-alias time11 "rcon mp_timelimit 11"
-alias time12 "rcon mp_timelimit 12"
-alias time13 "rcon mp_timelimit 13"
-alias time14 "rcon mp_timelimit 14"
-alias time15 "rcon mp_timelimit 15"
-alias time16 "rcon mp_timelimit 16"
-alias time17 "rcon mp_timelimit 17"
-alias time18 "rcon mp_timelimit 18"
-alias time19 "rcon mp_timelimit 19"
-alias time20 "rcon mp_timelimit 20"
-alias time21 "rcon mp_timelimit 21"
-alias time22 "rcon mp_timelimit 22"
-alias time23 "rcon mp_timelimit 23"
-alias time24 "rcon mp_timelimit 24"
-alias time25 "rcon mp_timelimit 25"
-alias time30 "rcon mp_timelimit 30"
-alias time35 "rcon mp_timelimit 35"
-alias time40 "rcon mp_timelimit 40"
-alias time45 "rcon mp_timelimit 45"
-alias time50 "rcon mp_timelimit 50"
-alias time55 "rcon mp_timelimit 55"
-alias time60 "rcon mp_timelimit 60"
-
-alias !time5 "say !rcon mp_timelimit 5"
-alias !time6 "say !rcon mp_timelimit 6"
-alias !time7 "say !rcon mp_timelimit 7"
-alias !time8 "say !rcon mp_timelimit 8"
-alias !time9 "say !rcon mp_timelimit 9"
-alias !time10 "say !rcon mp_timelimit 10"
-alias !time11 "say !rcon mp_timelimit 11"
-alias !time12 "say !rcon mp_timelimit 12"
-alias !time13 "say !rcon mp_timelimit 13"
-alias !time14 "say !rcon mp_timelimit 14"
-alias !time15 "say !rcon mp_timelimit 15"
-alias !time16 "say !rcon mp_timelimit 16"
-alias !time17 "say !rcon mp_timelimit 17"
-alias !time18 "say !rcon mp_timelimit 18"
-alias !time19 "say !rcon mp_timelimit 19"
-alias !time20 "say !rcon mp_timelimit 20"
-alias !time21 "say !rcon mp_timelimit 21"
-alias !time22 "say !rcon mp_timelimit 22"
-alias !time23 "say !rcon mp_timelimit 23"
-alias !time24 "say !rcon mp_timelimit 24"
-alias !time25 "say !rcon mp_timelimit 25"
-alias !time30 "say !rcon mp_timelimit 30"
-alias !time35 "say !rcon mp_timelimit 35"
-alias !time40 "say !rcon mp_timelimit 40"
-alias !time45 "say !rcon mp_timelimit 45"
-alias !time50 "say !rcon mp_timelimit 50"
-alias !time55 "say !rcon mp_timelimit 55"
-alias !time60 "say !rcon mp_timelimit 60"
-
-
-alias snake "map cp_snakewater_final1"
-alias bagel "map koth_bagel_rc5"
-alias clearcut "map koth_clearcut_b15d"
-alias product "map koth_product_final"
-alias process "map cp_process_f12"
-alias sunshine "map cp_sunshine"
-alias reckoner "map cp_reckoner_rc6"
-alias metal "map cp_metalworks_f5"
-alias gully "map cp_gullywash_f9"
-alias granary "map cp_granary_pro_rc2"
-
-//bind "ctrl" "load_itempreset 0" og resup bind
-//alias start_record "exec overrides/record"
-//alias end_record stop
-//alias record start_record
-bind b "exec overrides/record"
 bind "o" "explode"
 bind "l" "mp_tournament 1; sv_allow_wait_command 1; sv_cheats 1; net_fakelag 25; mp_restartgame_immediate 1; wait 900; hurtme -180"
 alias "fixSound" "snd_soundmixer Default_Mix"
 alias waitCancel "mp_waitingforplayers_cancel 1"
 
 
+// this is stupid //
+alias "battlecry" "voicemenu 2 1";
+alias "+panic" "battlecry; cl_yawspeed 3000; +left; +attack";
+alias "-panic" "-attack; -left; cl_yawspeed 210";
+//bind "mouse3" "+panic";
 
+
+//doesn't work atm
+//alias start_record "exec overrides/record"
+//alias end_record stop
+//alias record start_record
 
 
 
@@ -284,43 +80,15 @@ violence_hgibs 0
 
 mat_motion_blur_enabled 0
 
-prec_mode 2
-prec_notify 2
-prec_sound 1
+
+// rip my beloved
+//prec_mode 2
+//prec_notify 2
+//prec_sound 1
 
 
 
 
 
 
-
-
-
-// replay controlls
-alias demo_f_4 "demo_timescale 4; alias demo_slower demo_f_3;"
-alias demo_f_3 "demo_timescale 3; alias demo_faster demo_f_4; alias demo_slower demo_f_2;"
-alias demo_f_2 "demo_timescale 2; alias demo_faster demo_f_3; alias demo_slower demo_normal;"
-alias demo_normal "demo_timescale 1; alias demo_faster demo_f_2; alias demo_slower demo_s_2;"
-alias demo_s_2 "demo_timescale .5; alias demo_faster demo_normal; alias demo_slower demo_s_3;"
-alias demo_s_3 "demo_timescale .33; alias demo_faster demo_s_2; alias demo_slower demo_s_4;"
-alias demo_s_4 "demo_timescale .25; alias demo_faster demo_s_3;"
-
-bind uparrow demo_togglepause
-bind leftarrow demo_slower
-bind rightarrow demo_faster
-bind downarrow demo_normal
-
-demo_normal
-
-r_drawtracers_firstperson 0
-
-
-
-
-
-
-
-
-//Big chat messages binds:
-alias "big_T" "say ≣≣≣≣≣≣≣;wait 250; say ⠀⠀ Ⅱ;wait 250; say ⠀⠀ Ⅱ"
 
