--- a/overrides/engineer.cfg
+++ b/overrides/engineer.cfg
@@ -1,6 +1,8 @@
 exec overrides/reset
 exec overrides/toggleStates/engyState0;
 
+alias execCurrentClassCfg "exec overrides/engineer"
+
 bind 1 sentry
 bind 2 dispenser
 bind 3 tele_entrance
