--- a/overrides/scout.cfg
+++ b/overrides/scout.cfg
@@ -20,3 +20,4 @@ alias crouchRelease "-duck; alias permaCrouch crouchHold"
 //how to hold crouch:
 //bind "MWHEELDOWN" crouchHold
 //bind "MWHEELUP" crouchRelease
+bind k "say test successful!"
