--- a/overrides/toggleStates/toggleStateParams.cfg
+++ b/overrides/toggleStates/toggleStateParams.cfg
@@ -13,10 +13,10 @@ alias thank thanks
 alias thanks "voicemenu 0 1"
 alias good_work "voicemenu 2 7"
 
-bind b record
-alias record startRecording
-alias startRecording "exec overrides/record"
-alias stopRecording "stop"
+bind b recordDemo
+alias record startRecordingDemo
+alias startRecordingDemo "exec overrides/record"
+alias stopRecordingDemo "stop"
 
 alias resup0 preset0
 alias resup1 preset1
