--- a/overrides/medic.cfg
+++ b/overrides/medic.cfg
@@ -3,13 +3,13 @@ exec overrides/toggleStates/toggleState0;
 
 alias execCurrentClassCfg "exec overrides/medic"
 
-bind "MWHEELUP" switchToSimplePrimary
-bind "MWHEELDOWN" switchToComplexSecondary
+bind "MWHEELUP" switchToBow
+bind "MWHEELDOWN" switchToBeam
 bind "e" "+radar; voicemenu 2 0 "
 
 alias "autocall_default" "hud_medicautocallersthreshold 75.730003/Custom Threshold"
 alias "autocall_all" "hud_medicautocallersthreshold 150"
 alias "+radar" "autocall_all"
 alias "-radar" "autocall_default"
-alias switchToSimplePrimary "slot1; bind mouse2 slot3"
-alias switchToComplexSecondary "switchToSecondary; bind mouse2 +rightClick"
+alias switchToBow "slot1; bind mouse2 slot2"
+alias switchToBeam "slot2; bind mouse2 +rightClick"
