--- a/overrides/toggleStates/toggleState1.cfg
+++ b/overrides/toggleStates/toggleState1.cfg
@@ -4,6 +4,6 @@ bind "MWHEELDOWN" switchToSecondary
 bind ctrl "resup1; switchingToLoadout0; execCurrentClassCfg"
 
 bind shift +toggleState
-alias +toggleState "alias nice_aim nice_shot; alias call call_help; alias thank good_work; alias record stopRecording; alias resup1 preset0; alias switchToSecondary melee; alias +dualJump +normalJump; alias -dualJump -normalJump; alias +rightClick melee; alias switchingToLoadout0 echo [LOG] switching to loadout 0"
-alias -toggleState "alias nice_aim nice_arrow; alias call call_medic; alias thank thanks; alias record startRecording; alias resup1 preset1; alias switchToSecondary secondary; alias +dualJump +crouchJump; alias -dualJump -crouchJump; alias +rightClick +altFire; alias switchingToLoadout0 say_team"
+alias +toggleState "alias nice_aim nice_shot; alias call call_help; alias thank good_work; alias record stopRecording; alias resup1 preset0; alias switchToSecondary melee; alias +dualJump +normalJump; alias -dualJump -normalJump; alias switchingToLoadout0 echo [LOG] switching to loadout 0"
+alias -toggleState "alias nice_aim nice_arrow; alias call call_medic; alias thank thanks; alias record startRecording; alias resup1 preset1; alias switchToSecondary secondary; alias +dualJump +crouchJump; alias -dualJump -crouchJump; alias switchingToLoadout0 say_team"
 
